<resources>
    <string name="app_name">Basic Chatbot</string>
    <string name="hint_name">Insert Kimi No Namaewa</string>
    <string name="text_next">NEXT</string>
    <string name="text_other">OTHER BIBLE VERSE</string>

    <string name="quote"> Kalo gw sih ya gimana ya ya gitu deh, tapi gak gitu juga </string>
    <string name="verse">- Orang Stress</string>

    <!-- Error Text -->
    <string name="error_not_fill">Please Fill The Blank!</string>
</resources>